--- a/Ejercicios/tuconcierto/index.html
+++ b/Ejercicios/tuconcierto/index.html
@@ -5,9 +5,17 @@
     <title>Tu Concierto</title>
     <link rel="stylesheet" href="css/estilos.css">
   </head>
+
   <body>
+    <div>
 <h1><img src="images/logo.png" alt="logo"> Tu concierto</h1>
 <p>Bienvenido a tu blog de conciertos</p>
 <img src="images/concert.jpg" alt="concert" width="80%" align="middle">
+<P>  <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">Info</a>
+</p>
+<div>
   </body>
+
+
+
 </html>
