--- a/Ejercicios/cv-master/index.html
+++ b/Ejercicios/cv-master/index.html
@@ -13,9 +13,9 @@
           </h1>
       </header>
       <nav>
-        <a class="enlace" href="../P/index.html">Inicio</a>
+        <a class="enlace" href="../cv-master/index.html">Inicio</a>
         |
-        <a class="enlace" href="educacion/educacion.html">Edecucaión</a>
+        <a class="enlace" href="educacion/educacion.html">Educación</a>
   	|
         <a class="enlace" href="experiencia/experiencia.html">Experiencia</a>
         </nav>
@@ -61,11 +61,11 @@ documentación, procesos y capacitación.</li>
       </article>
 
     <footer>
-      Email:bruno.acorsii@gmail.com
+      <a href="malito:bruno.acorsii@gmail.com"> <img src="imgs/em.png" alt="email" title="Email" style= width="40px" height="40px"align="center"/> bruno.acorsii@gmail.com</a>
       |
-      Tel: +5491161905901
+     <img src="imgs/tl2.png" alt="Contacto" title="Contacto" style= width="40px" height="40px"align="center"/> +5491161905901
       |
-      Linkdin:  <a href="https://www.linkedin.com/in/bruno-figueirerdo-acorsi-36bb2243/">Perfil linkedin</a>
+      <a href="https://www.linkedin.com/in/bruno-figueirerdo-acorsi-36bb2243/"> <img src="imgs/lk.png" alt="Perfil linkedin" title="Perfil linkedin" style= width="40px" height="40px"align="center"/></a>
     </footer>
   </body>
 </html>
