--- a/Ejercicios/cv-master/educacion/educacion.html
+++ b/Ejercicios/cv-master/educacion/educacion.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Educación</title>
   </head>
-  <body>
+  <body >
     <header>
-            <h1 align="center">
+            <h1 align="center" id="educacion">
               <img src="imgs/logo5.svg" align="left" alt="logo1" title="Logo"style= width="55px" height="55px" >
               Curriculum Vitae
           </h1>
@@ -29,7 +29,7 @@
       <h3>Fecha y lugar de nacimento:29/05/1985 Sao Paulo - Brasil</h3>
 
       </article>
-  
+
       <article>
         <h2>Educación</h2>
         <table border="1">
