--- a/Ejercicios/cv-master/educacion/educacion.html
+++ b/Ejercicios/cv-master/educacion/educacion.html
@@ -6,7 +6,7 @@
   </head>
   <body >
     <header>
-            <h1 align="center" id="educacion">
+            <h1 align="center">
               <img src="imgs/logo5.svg" align="left" alt="logo1" title="Logo"style= width="55px" height="55px" >
               Curriculum Vitae
           </h1>
